# dimsumpy

./: .gitignore  README.md  pyproject.toml  requirements.txt
archives/av_app/: av_model.py
database/: postgres.py
database/.mypy_cache/3.7/: _ast.meta.json  _importlib_modulespec.meta.json  abc.meta.json  ast.meta.json  builtins.meta.json  codecs.meta.json  io.meta.json  mmap.meta.json  posix.meta.json  postgres.data.json  postgres.meta.json  sys.meta.json  types.meta.json  typing.meta.json
database/.mypy_cache/3.7/collections/: __init__.meta.json  abc.meta.json
dimsumpy/: av.py  functional.py  scraper.py
dimsumpy/database/: postgres.py
dimsumpy/qt/: dataframemodel.py  threads.py
docs/: docs.md
finance/: technical.py
finance/.mypy_cache/3.7/: _ast.meta.json  _importlib_modulespec.meta.json  abc.meta.json  ast.meta.json  builtins.meta.json  codecs.meta.json  decimal.data.json  decimal.meta.json  fractions.data.json  fractions.meta.json  io.meta.json  mmap.meta.json  numbers.data.json  numbers.meta.json  posix.meta.json  statistics.data.json  statistics.meta.json  sys.meta.json  technical.data.json  technical.meta.json  types.meta.json  typing.meta.json
qt/: dataframemodel.py  decorators.py  functions.py  threads.py
qt5/: dataframemodel.py  decorators.py
qt5/.mypy_cache/3.7/: _ast.meta.json  _importlib_modulespec.meta.json  abc.meta.json  ast.meta.json  builtins.meta.json  codecs.meta.json  io.meta.json  mmap.meta.json  posix.meta.json  sys.meta.json  types.meta.json  typing.meta.json
tests/: test_av.py
web/: brew.py  crawler.py  page_source.html
(+22 files in other folders)
