[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dimsumpy"
version = "0.1.0"
description = "My custom package dimsumpy"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "CS" }
]
dependencies = [
  # e.g. "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

# No [tool.setuptools] package-dir needed for flat layout.
# This tells setuptools to find packages like ./batterypy
[tool.setuptools.packages.find]
where = ["."]
include = ["dimsumpy*"]
